--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,11 +5,6 @@
 }
 
 body {
-    font: Arial, Haveltica, sans-serif;
-    background-color: rgba(43, 43, 43, 0.8);
-    color: white;
-
-    h1 {
-        font-size: 80px;
-    }
+    font: 16px "Helvetica Neue", Arial, sans-serif;
+    color: #121214;
 }
